# DIMQ

./: CMakeLists.txt  CONTRIBUTING.md  ChangeLog.txt  LICENSE.txt  Makefile  NOTICE.md  README-compiling.md  README-letsencrypt.md  README-windows.txt  README.md  addresses.conf  config.h  config.mk  dimq (copy).conf  dimq.conf  dimqMain.conf  libdimq.pc.in  libdimqpp.pc.in
Bridge Examples/: dimq.conf  dimq2.conf
Client Examples/Python/: SimpleFullClient.py  Simulator.py  Simulator_test.py  simpleConnect.py  simplePublish.py  simpleSubscribe.py
apps/: CMakeLists.txt  Makefile
apps/db_dump/: Makefile  db_dump.c  dimq_db_dump  print.c  stubs.c
apps/dimq_ctrl/: CMakeLists.txt  Makefile  client.c  dimq_ctrl  dimq_ctrl.c  dimq_ctrl.h  dynsec.c  dynsec_client.c  dynsec_group.c  dynsec_role.c  example.c  options.c
apps/dimq_passwd/: CMakeLists.txt  Makefile  dimq_passwd  dimq_passwd.c
cjson/: README.md  cJSON_test  libcjson.so.1.7.15  libcjson_utils.so.1.7.15
client/: CMakeLists.txt  Makefile  client_props.c  client_shared.c  client_shared.h  dimq_pub  dimq_rr  dimq_sub  pub_client.c  pub_shared.c  pub_shared.h  pub_test_properties  rr_client.c  sub_client.c  sub_client_output.c  sub_client_output.h  sub_test_fixed_width  sub_test_properties
examples/mysql_log/: Makefile  mysql_log.c
examples/publish/: basic-1.c
examples/subscribe/: basic-1.c
examples/subscribe_simple/: Makefile  callback.c  multiple.c  single.c
examples/temperature_conversion/: Makefile  main.cpp  readme.txt  temperature_conversion.cpp  temperature_conversion.h
include/: dimq.h  dimq_broker.h  dimq_plugin.h  mqtt_protocol.h
installer/: dimq.nsi  dimq64.nsi
lib/: CMakeLists.txt  Makefile  actions.c  alias_dimq.c  alias_dimq.h  callbacks.c  connect.c  dimq.c  dimq_internal.h  handle_auth.c  handle_connack.c  handle_disconnect.c  handle_ping.c  handle_pubackcomp.c  handle_publish.c  handle_pubrec.c  handle_pubrel.c  handle_suback.c  handle_unsuback.c  helpers.c  libdimq.so.1  linker.version  logging_dimq.c  logging_dimq.h  loop.c  memory_dimq.c  memory_dimq.h  messages_dimq.c  messages_dimq.h  misc_dimq.c  misc_dimq.h  net_dimq.c  net_dimq.h  net_dimq_ocsp.c  options.c  packet_datatypes.c  packet_dimq.c  packet_dimq.h  property_dimq.c  property_dimq.h  (+24 more)
lib/cpp/: CMakeLists.txt  Makefile  dimqpp.cpp  dimqpp.h  libdimqpp.so.1
man/: CMakeLists.txt  Makefile  dimq-tls.7  dimq-tls.7.xml  dimq.8  dimq.8.xml  dimq.conf.5  dimq.conf.5.xml  dimq_ctrl.1  dimq_ctrl.1.xml  dimq_ctrl_dynsec.1  dimq_ctrl_dynsec.1.xml  dimq_passwd.1  dimq_passwd.1.xml  dimq_pub.1  dimq_pub.1.xml  dimq_rr.1  dimq_rr.1.xml  dimq_sub.1  dimq_sub.1.xml  libdimq.3  libdimq.3.xml  manpage.xsl  mqtt.7  mqtt.7.xml
misc/currentcost/: cc128_log_mysql.pl  cc128_parse.pl  cc128_read.pl  cc128_read.py
misc/letsencrypt/: dimq-copy.sh
plugins/: README.md
plugins/auth-by-ip/: CMakeLists.txt  Makefile  dimq_auth_by_ip.c
plugins/dynamic-security/: CMakeLists.txt  Makefile  README.md  acl.c  auth.c  clientlist.c  clients.c  dynamic_security.h  grouplist.c  groups.c  json_help.c  plugin.c  rolelist.c  roles.c  sub_matches_sub.c
plugins/message-timestamp/: CMakeLists.txt  Makefile  dimq_message_timestamp.c
plugins/payload-modification/: CMakeLists.txt  Makefile  dimq_payload_modification.c
security/: dimq.apparmor
service/monit/: dimq.monit
service/svscan/: run
service/systemd/: README  dimq.service.notify  dimq.service.simple
service/upstart/: dimq.conf
snap/: snapcraft.yaml
snap/local/: launcher.sh
src/: CMakeLists.txt  Makefile  bridge.c  bridge_topic.c  conf.c  conf_includedir.c  context.c  control.c  database.c  dimq  dimq.c  dimq_broker_internal.h  handle_auth.c  handle_connack.c  handle_connect.c  handle_disconnect.c  handle_publish.c  handle_subscribe.c  handle_unsubscribe.c  keepalive.c  linker-macosx.syms  linker.syms  logging.c  loop.c  memory_public.c  mux.c  mux.h  mux_epoll.c  mux_poll.c  net.c  password_dimq.c  password_dimq.h  persist.h  persist_read.c  persist_read_v234.c  persist_read_v5.c  persist_write.c  persist_write_v5.c  plugin.c  plugin_debug.c  (+20 more)
test/: dimq_test.py  ptest.py
test/broker/: 01-connect-575314.py  01-connect-allow-anonymous.py  01-connect-disconnect-v5.py  01-connect-max-connections.py  01-connect-max-keepalive.py  01-connect-uname-no-password-denied.py  01-connect-uname-or-anon.py  01-connect-uname-password-denied-no-will.py  01-connect-uname-password-denied.py  01-connect-uname-password-success-no-tls.py  01-connect-zero-length-id.py  02-shared-qos0-v5.py  02-subhier-crash.py  02-subpub-qos0-long-topic.py  02-subpub-qos0-oversize-payload.py  02-subpub-qos0-queued-bytes.py  02-subpub-qos0-retain-as-publish.py  02-subpub-qos0-send-retain.py  02-subpub-qos0-subscription-id.py  02-subpub-qos0-topic-alias-unknown.py  02-subpub-qos0-topic-alias.py  02-subpub-qos1-message-expiry-retain.py  02-subpub-qos1-message-expiry-will.py  02-subpub-qos1-message-expiry.py  02-subpub-qos1-nolocal.py  02-subpub-qos1-oversize-payload.py  02-subpub-qos1.py  02-subpub-qos2-1322.py  02-subpub-qos2-pubrec-error.py  02-subpub-qos2-receive-maximum-1.py  02-subpub-qos2-receive-maximum-2.py  02-subpub-qos2-receive-maximum-helper.py  02-subpub-qos2.py  02-subpub-recover-subscriptions.py  02-subscribe-dollar-v5.py  02-subscribe-invalid-utf8.py  02-subscribe-long-topic.py  02-subscribe-persistence-flipflop.py  03-pattern-matching.py  03-publish-b2c-disconnect-qos1.py  (+140 more)
test/client/: test.sh
test/get_ip/: getip  getip.c
test/lib/: 01-con-discon-success.py  01-keepalive-pingreq.py  01-no-clean-session.py  01-server-keepalive-pingreq.py  01-unpwd-set.py  01-will-set.py  01-will-unpwd-set.py  02-subscribe-qos0.py  02-subscribe-qos1.py  02-subscribe-qos2.py  02-unsubscribe-multiple-v5.py  02-unsubscribe-v5.py  02-unsubscribe.py  03-publish-b2c-qos1-unexpected-puback.py  03-publish-b2c-qos1.py  03-publish-b2c-qos2-len.py  03-publish-b2c-qos2-unexpected-pubcomp.py  03-publish-b2c-qos2-unexpected-pubrel.py  03-publish-b2c-qos2.py  03-publish-c2b-qos1-disconnect.py  03-publish-c2b-qos1-len.py  03-publish-qos0.py  (+29 more)
(+132 files in other folders)
